crates/codex/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__goal_menu_paused.snap
---
source: tui/src/chatwidget/tests/goal_menu.rs
expression: rendered_goal_summary(&mut rx)
---
Goal
Status: paused
Objective: Keep improving the bare goal command until it feels calm and useful.
Time used: 1m
Tokens used: 12.5K

Commands: /goal resume, /goal clear