crates/codex/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_loading_state.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Plugins
  Loading available plugins...
  This updates when the marketplace list is ready.

›    Loading plugins...  This updates when the marketplace list is ready.

  Press enter to confirm or esc to go back